data/derived/fa15/progs/unify/prog3476.ml.out
Characters 24-25:
  let _ = pipe [(fun x -> x + 3);(fun x-> x + 3)] 3;;
                          ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
